ISTO-134 Address SQ issues in FHIR functionality, except complexity refactoring